@startuml FileHashBackendClassDiagram



namespace FileHash{

    class IncreasePercentage{
        float percentage
        +IncreasePercentage(float percentage)
    }

    enum HasherType as "HashType" <<stereotype>> {
        SHA256
        MD5
        SHA1
        CRC32
        CRC64 
    }

    enum FindStatus as "FindStatus" <<stereotype>> {
        FilesFound
        FilesNotFound
        InvalidArguments
    }

    class FindResult
    {
        FindStatus findStatus
        List<string> files
        double filesSize
    }

    interface IFinder<<abstract>>{
        {abstract} FindResult Find(Collection<string> foldersToSearch, string checksum, Hasher hasher)
        {abstract} RegisterEventHandler(EventHandler<IncreasedPercentage> eventHandler) : void

    }
    interface IHasher<<abstract>>{
        {abstract} Tuple<string, float> GetHash(List<string> files) : void
        {abstract} RegisterEventHandler(EventHandler<IncreasedPercentage> eventHandler) : void
    }
    
    class Creator << (S,#FF7700) Singleton >> {
        {static} GetInstance() : Creator
        {static} GetHasher(HasherType) : IHasher
        {static} GetFinder(HasherType) : IFinder
    }

    FindResult *-- FindStatus : "<<uses>>"
    HasherType *-- IHasher : "<<uses>>"
    IFinder *-- IHasher : "<<uses>>"
    IFinder *-- FindResult : "<<uses>>"
    IFinder *-- IncreasePercentage : "<<uses>>"
    IHasher *-- IncreasePercentage : "<<uses>>"
    Creator --.> IHasher : "<<instantiates>>"
    Creator --.> IFinder : "<<instantiates>>"

    note top of Creator
        Singleton klasa koja služi za kreiraniranje
        instanci Hasher i Finder objekta.
    end note
}

@enduml